--- a/_posts/2006-08-19-%e6%94%b9%e7%89%88%e8%bf%9b%e8%a1%8c%e6%97%b6.markdown
+++ b/_posts/2006-08-19-%e6%94%b9%e7%89%88%e8%bf%9b%e8%a1%8c%e6%97%b6.markdown
@@ -7,5 +7,6 @@ date: !binary |-
 date_gmt: !binary |-
   MjAwNi0wOC0xOSAxMTowNDo0NyArMDgwMA==
 ---
-一直对之前用的主题不满意，去 zblog 论坛上找也没有发现自己喜欢的样式。只好自己动手改了一版，暂时看来还可以。
-因为中间机器死机了几回，大大的沿长了改版时间……
+一直对之前用的主题不满意，去 zblog 论坛上找也没有发现自己喜欢的样式。
+只好自己动手改了一版，暂时看来还可以。
+因为中间机器死机了几回，大大的沿长了改版时间。
