--- a/_posts/2006-08-22-mplayer-%e6%94%af%e6%8c%81%e7%9a%84%e7%bc%96%e8%a7%a3%e7%a0%81%e5%99%a8.markdown
+++ b/_posts/2006-08-22-mplayer-%e6%94%af%e6%8c%81%e7%9a%84%e7%bc%96%e8%a7%a3%e7%a0%81%e5%99%a8.markdown
@@ -7,7 +7,7 @@ date: !binary |-
 date_gmt: !binary |-
   MjAwNi0wOC0yMiAwODozMTo1NyArMDgwMA==
 ---
-原文 www.mplayerhq.hu/DOCS/HTML/zh/codecs.html
-自己留个记录，唉，配置 FFMPEG 真是费事。
-:(
-faad2 faac 配置不过去了～＃！＃￥！￥
+原文 <www.mplayerhq.hu/DOCS/HTML/zh/codecs.html>
+自己留个记录，唉，编译 FFMPEG 真是费事。
+
+faad2 faac 过不去了
