--- a/_posts/2006-10-24-mytshirt-%e7%94%a8%e6%88%b7%e8%b4%a1%e7%8c%ae%e5%86%85%e5%ae%b9%ef%bc%8c%e5%88%86%e4%ba%ab%e5%86%85%e5%ae%b9.markdown
+++ b/_posts/2006-10-24-mytshirt-%e7%94%a8%e6%88%b7%e8%b4%a1%e7%8c%ae%e5%86%85%e5%ae%b9%ef%bc%8c%e5%88%86%e4%ba%ab%e5%86%85%e5%ae%b9.markdown
@@ -9,4 +9,4 @@ date_gmt: !binary |-
 ---
 MyTshirt http://www.mytshirt.cn
 刚从Keso 那里看到的网站，还不错，用户贡献、分享内容。
-至少现在为止我已经看到了好几个我喜欢的 Style ，：）
+至少现在为止我已经看到了好几个我喜欢的 Style ，
