--- a/_posts/2006-11-19-css%e6%a0%87%e5%87%86%e5%8c%96%e7%bd%91%e9%a1%b5%e5%b8%83%e5%b1%80%e4%b8%8e%e9%87%8d%e6%9e%84.markdown
+++ b/_posts/2006-11-19-css%e6%a0%87%e5%87%86%e5%8c%96%e7%bd%91%e9%a1%b5%e5%b8%83%e5%b1%80%e4%b8%8e%e9%87%8d%e6%9e%84.markdown
@@ -7,7 +7,7 @@ date: !binary |-
 date_gmt: !binary |-
   MjAwNi0xMS0xOSAwMzoyMjo1OSArMDgwMA==
 ---
-<strong>刚刚在BLUEIDEA上看到的,到时有空就去了,哈,学习学习嘛.         :)</strong>
+<strong>刚刚在BLUEIDEA上看到的,到时有空就去了,哈,学习学习嘛.         </strong>
 <strong>活动时间:11月25日(星期六) 下午 14:00-15:30
 活动主题:CSS标准化网页布局与重构
 </strong><strong>活动地点:中关村图书大厦(左岸公社) 五层多功能厅
