--- a/_posts/2006-11-24-%e8%b1%86%e7%93%a3%e7%9a%84%e7%a1%ae%e8%ae%a4.markdown
+++ b/_posts/2006-11-24-%e8%b1%86%e7%93%a3%e7%9a%84%e7%a1%ae%e8%ae%a4.markdown
@@ -7,4 +7,4 @@ date: !binary |-
 date_gmt: !binary |-
   MjAwNi0xMS0yNCAwNTozMTo0OSArMDgwMA==
 ---
-doubanclaimb330c02db09171e7 这回豆瓣应该确认我了吧。 :)
+doubanclaimb330c02db09171e7 这回豆瓣应该确认我了吧。 
