--- a/_posts/2007-01-05-%e4%b9%8c%e9%be%9f%e4%bc%a0%e8%af%b4.markdown
+++ b/_posts/2007-01-05-%e4%b9%8c%e9%be%9f%e4%bc%a0%e8%af%b4.markdown
@@ -7,7 +7,7 @@ date: !binary |-
 date_gmt: !binary |-
   MjAwNy0wMS0wNSAwMToxNDozMiArMDgwMA==
 ---
-好友在Ｑ里发给我的，哈，大家看看笑一笑吧。  :)
+好友在Ｑ里发给我的，哈，大家看看笑一笑吧。  
 1.乌龟的屁股 谜底：规定 ； 　　
 2.乌龟倒立 谜底：上面有规定； 　　 
 3.乌龟翻筋斗 谜底：一个又一个规定； 　　 
