--- a/_posts/2007-07-04-php5%e9%9d%99%e6%80%81%e7%b1%bb%e6%af%94%e5%85%a8%e5%b1%80%e6%95%b0%e7%bb%84%e5%bf%ab.markdown
+++ b/_posts/2007-07-04-php5%e9%9d%99%e6%80%81%e7%b1%bb%e6%af%94%e5%85%a8%e5%b1%80%e6%95%b0%e7%bb%84%e5%bf%ab.markdown
@@ -111,5 +111,5 @@ echo "\n";
 结果：
 0.51952910423279
 0.18489503860474
-可见 global 有多慢了，并且我们经常还会因为一些原因忘记写他，所以我的“建议”是把一些全局变量都放到静态类里，这样还用的时候就不用一直记着去 global 声明了，并且通过类来访问，我们还可以对访问进行一些控制。：）
+可见 global 有多慢了，并且我们经常还会因为一些原因忘记写他，所以我的“建议”是把一些全局变量都放到静态类里，这样还用的时候就不用一直记着去 global 声明了，并且通过类来访问，我们还可以对访问进行一些控制。
 不知道您是怎么想？我现在是把配置信息都放到静态类里了。终于告别了“global”~！
