--- a/_posts/2007-12-11-%e5%8d%96%e5%85%85%e6%b0%94%e5%a8%83%e5%a8%83%e7%bd%91%e7%ab%99%e4%b8%8a%e7%9a%84%e7%88%86%e5%bc%ba%e7%95%99%e8%a8%80.markdown
+++ b/_posts/2007-12-11-%e5%8d%96%e5%85%85%e6%b0%94%e5%a8%83%e5%a8%83%e7%bd%91%e7%ab%99%e4%b8%8a%e7%9a%84%e7%88%86%e5%bc%ba%e7%95%99%e8%a8%80.markdown
@@ -47,7 +47,7 @@ date_gmt: !binary |-
 甜蜜蜜网友匿名留言: 有震动吗
 客服小蜜回复: 无震动功能,完全自助!
 甜蜜蜜网友大二男生留言: 看起来不错，有没有女老师类型的？我很想干我的老师，希望有一款女老师的产品满足一下我
-客服小蜜回复: 你的想法有点变态：），请关注我们的商品，有的时候您第一时间来购买。
+客服小蜜回复: 你的想法有点变态，请关注我们的商品，有的时候您第一时间来购买。
 甜蜜蜜网友匿名留言: 身体就是白色的吗？还是穿着衣服了？有脱掉以后的图片没？
 客服小蜜回复: 是的,她全都是白的,没有,穿衣服才有情趣嘛!
 甜蜜蜜网友匿名留言: 你好；２２５９(此处被屏蔽)是多大啊，会不会变大呢
