--- a/_posts/2008-10-08-%e8%ae%a9%e6%88%91%e7%ac%91%e5%96%b7%e4%ba%86%e7%9a%8444%e4%b8%aa%e8%ae%ba%e5%9d%9b%e5%9b%9e%e5%a4%8d.markdown
+++ b/_posts/2008-10-08-%e8%ae%a9%e6%88%91%e7%ac%91%e5%96%b7%e4%ba%86%e7%9a%8444%e4%b8%aa%e8%ae%ba%e5%9d%9b%e5%9b%9e%e5%a4%8d.markdown
@@ -115,7 +115,7 @@ date_gmt: !binary |-
 
 　　　　　　4.MM刚好看见我这个帅哥，一时激动得无法表白，只好大呼其爽； 
 
-　　　　　　5.大家补充……：） 
+　　　　　　5.大家补充…… 
 
 　　　　　　论坛沙发：明天我就把这丫头的车座再装回去！ 
 
