--- a/_posts/2009-01-08-%e4%bb%80%e4%b9%88%e6%98%af%e7%9c%9f%e6%ad%a3%e7%9a%84%e4%ba%a7%e5%93%81%e7%bb%8f%e7%90%86%e8%bd%ac%e8%87%aa5g.markdown
+++ b/_posts/2009-01-08-%e4%bb%80%e4%b9%88%e6%98%af%e7%9c%9f%e6%ad%a3%e7%9a%84%e4%ba%a7%e5%93%81%e7%bb%8f%e7%90%86%e8%bd%ac%e8%87%aa5g.markdown
@@ -48,7 +48,7 @@ n多人也处于不明白产品经理为何物的蛮荒时代。
 要对产品的一切细节了然于胸，要对产品涉及到的方方面面有所了解，要能够控制产品团队（设计、技术、运营等一切环节），要有高超的沟通能力和技巧，要有极强的成功欲望和非常主动的做事态度。
 
 六、总结
-所以真正意义上的产品经理是很难得的，压力是很大的，待遇是很高的，人才是很稀有的:)  
+所以真正意义上的产品经理是很难得的，压力是很大的，待遇是很高的，人才是很稀有的  
 头顶产品经理title的人99%不具备产品经理的资质
 也许你认为我写的这些要求太高了，但事实上一名合格的产品经理的确应该具备的基本素质。
 希望大家共同努力，朝这个目标发展。
