--- a/_posts/2009-06-07-%e5%91%bd%e4%bb%a4%e8%a1%8c%e7%bc%96%e8%af%91%e5%b7%a5%e5%85%b7nmake.markdown
+++ b/_posts/2009-06-07-%e5%91%bd%e4%bb%a4%e8%a1%8c%e7%bc%96%e8%af%91%e5%b7%a5%e5%85%b7nmake.markdown
@@ -34,7 +34,7 @@ Makefile的组成部分包括：成文件包含：
 描述块是后面可跟有命令块的依赖项行：
 <pre class="code">    targets... : dependents...
             commands...</pre>
-依赖项行指定一或多个目标以及零或多个依赖项。目标必须位于行首。用冒号 (:) 将目标和依赖项分开；允许使用空格或制表符。若要拆分行，请在目标或依赖项后面使用反斜杠 (\ )。如果目标不存在、目标的时间戳比依赖项早或者目标是伪目标，则 NMAKE 执行命令。如果某依赖项是其他地方的目标，并且不存在或对于自己的依赖项已过期，则 NMAKE 在更新当前依赖项之前更新该依赖项。
+依赖项行指定一或多个目标以及零或多个依赖项。目标必须位于行首。用冒号 ( 将目标和依赖项分开；允许使用空格或制表符。若要拆分行，请在目标或依赖项后面使用反斜杠 (\ )。如果目标不存在、目标的时间戳比依赖项早或者目标是伪目标，则 NMAKE 执行命令。如果某依赖项是其他地方的目标，并且不存在或对于自己的依赖项已过期，则 NMAKE 在更新当前依赖项之前更新该依赖项。
 <a name="_asug_commands_in_a_makefile"></a><strong>b.命令</strong>
 如果依赖项已过期，则描述块或推理规则指定要运行的命令块。NMAKE 在运行命令之前显示每个命令，除非使用了 /S 选项、<strong>.SILENT</strong>、<strong>!CMDSWITCHES</strong> 或 @。如果描述块后面没有紧跟命令块，NMAKE 将查找匹配的推理规则。
 命令块包含一个或多个命令，每个命令位于各自的命令行上。在依赖项（或规则）和命令块之间不能出现空行。但是可以出现只包含空格或制表符的行；该行被解释为空命令，并且不出现错误。命令行之间允许有空行。
@@ -56,7 +56,7 @@ Makefile的组成部分包括：成文件包含：
 如果过期的依赖项没有命令，并且如果 <strong>.SUFFIXES</strong> 包含依赖项的扩展名，则 NMAKE 使用其扩展名与当前或指定目录中的目标和现有文件匹配的规则。如果有多个规则与现有文件匹配，<strong>.SUFFIXES</strong> 列表将确定使用哪一个规则；列表优先级从左向右按降序排列。如果依赖文件不存在，并且未在另一个描述块中作为目标列出，则推理规则可以从具有相同基名称的另一个文件创建缺少的依赖项。如果描述块的目标没有依赖项或命令，推理规则可以更新目标。即使不存在描述块，推理规则也可以生成命令行目标。即使指定了显式依赖项，NMAKE 也可以调用推理依赖项的规则。
 <a name="_asug_dot_directives"></a>
 <strong>e.点指令</strong>
-在描述块之外的行首指定点指令。点指令以句点 ( . ) 开始，后面跟一个冒号 (:)。允许使用空格或制表符。点指令名区分大小写并且应为大写。
+在描述块之外的行首指定点指令。点指令以句点 ( . ) 开始，后面跟一个冒号 (。允许使用空格或制表符。点指令名区分大小写并且应为大写。
 <div class="tablediv">
 <table id="Table1" class="dtTABLE" border="0" cellspacing="0">
 <tbody>
