--- a/_posts/2006-08-18-%e6%af%8f%e6%97%a5%e4%b8%80%e6%ac%a1blogging.markdown
+++ b/_posts/2006-08-18-%e6%af%8f%e6%97%a5%e4%b8%80%e6%ac%a1blogging.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 每日一次Blogging&#8230;
+title: 每日一次Blogging
 author: gavinkwoe
 date: !binary |-
   MjAwNi0wOC0xOCAwMDowMjo1OSArMDgwMA==
